Added JumpyBlocks Project

--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
 
 	<div class="row" id="projects"></div>
 
+	<section class="projects d-flex">
+		<div class="project justify-content-center align-self-center">
+			<img src="https://drive.google.com/uc?id=1w5ohcBFSLmE15aRPRFpyFSNAzv3PFPcX" alt="Flappy Blocks"/>
+			<h2>Jumpy Blocks</h2>
+			<p class="serif"> September, 2020 </p>
+			<p class="serif"> A Flappy Bird clone built with Javascript and Phaser. </p>
+			<div class="row">
+				<a href="https://github.com/genesisbarrios/jumpyblocks" target="_blank" class="view-button"> View Project </a>
+			</div>
+		</div>
+	</section>
+
 	<section class="projects red d-flex">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1kHyPPxqmGHWePdPgrhfEkBP2hxI0s90b"/>
