updated picture and bio

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 				<div class="col-3">
 					<div class="face-cont" id="face">
-						<img class="face" src="https://drive.google.com/uc?id=1japqUBN1T_J1MxP_USSy0mtIZezem12s">
+						<img class="face" src="https://drive.google.com/uc?id=1J4vRhyOxKnHbgRQQ7sOOVExxj-3oKfZN">
 					</div>
 				</div>
 
@@ -33,11 +33,12 @@
 								<b>I'm a Software Engineer based in Miami, Florida.</b>
 							</h2>
 						<p class="serif">
-							As a Computer Science Undergraduate at Florida International University I have studied C Programming,
-							Java Programming, Data Structures, Discrete Structures, Computer Architecture, Database Management, 
-							and Programming Languages. In my free time I have learned Web Development and have been employed as 
-							a Front-End Software Engineer since June of 2018. I am also learning Back End Development with Java, 
-							as well as Node.js. 
+							I got my Bachelor's of Science in Computer Science Spring of 2020 from Florida International University.
+							Some of my topics of study include: C Programming, Java Programming, Data Structures, Discrete Structures, Computer Architecture, 
+							Database Management, Net Centric Computing, Software Engineering, Mobile Application Development, and Programming Languages. 
+							I have been working as a Front End Software Engineer for almost two years and I am currently doing an Application Development 
+							internship where we build applications on the Azure cloud. I have experience with various technologies including Javascript, JQuery,
+							Bootstrap, HTML, CSS, Angular, Node.js, MongoDB, SQL, MySQL, MicrosoftSQL, Java, Tomcat, C#, .NET, Azure Cloud, Swift, and Python.
 						</p>
 						<a href="#" id="projLink">View Projects</a>
 					</div>
