--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex blue">
+	<section class="projects d-flex darkgrey">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1ZqGWrnyAR6041V_obQMHPpQja-V3aMJO" alt="Artist Website"/>
 			<h2>Artist Website</h2>
