flappy blocks image update

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 	<section class="projects d-flex">
 		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?id=1w5ohcBFSLmE15aRPRFpyFSNAzv3PFPcX" alt="Flappy Blocks"/>
+			<img src="https://drive.google.com/uc?id=1ps5VAAgkwMktDpkeaaOCKNdbz2BeLQPQ" alt="Jumpy Blocks"/>
 			<h2>Jumpy Blocks</h2>
 			<p class="serif"> September, 2020 </p>
 			<p class="serif"> A Flappy Bird clone built with Javascript and Phaser. </p>
