added tad hack global section

--- a/index.html
+++ b/index.html
@@ -61,6 +61,18 @@
 
 	<section class="projects d-flex">
 		<div class="project justify-content-center align-self-center">
+			<img src="https://drive.google.com/uc?id=1KzxObx4MwrtQ_iXZn2BG1tYrJnFCH2Hm" alt="Group Event Manager Mobile App"/>
+			<h2>Group Event Manager</h2>
+			<p class="serif"> October, 2020 </p>
+			<p class="serif"> A Mobile-App that allows users to create, edit, and rsvp to events. </p>
+			<div class="row">
+				<a href="https://github.com/genesisbarrios/GroupEventManager" target="_blank" class="view-button"> View Project </a>
+			</div>
+		</div>
+	</section>
+
+	<section class="projects d-flex darkgrey">
+		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1ps5VAAgkwMktDpkeaaOCKNdbz2BeLQPQ" alt="Jumpy Blocks"/>
 			<h2>Jumpy Blocks</h2>
 			<p class="serif"> September, 2020 </p>
