--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 							I got my Bachelor's of Science in Computer Science Spring of 2020 from Florida International University.
 							Some of my topics of study include: C Programming, Java Programming, Data Structures, Discrete Structures, Computer Architecture, 
 							Database Management, Net Centric Computing, Software Engineering, Mobile Application Development, and Programming Languages. 
-							I have been working as a Front End Software Engineer for almost two years and I am currently doing an Application Development 
-							internship where we build applications on the Azure cloud. I have experience with various technologies including Javascript, JQuery,
+							I am currently working as an IT Resident at Assurant where I build and support applications in the Azure cloud. I have experience with various technologies including Javascript, JQuery,
 							Bootstrap, HTML, CSS, Angular, Node.js, MongoDB, SQL, MySQL, MicrosoftSQL, Java, Tomcat, C#, .NET, Azure Cloud, Swift, and Python.
 						</p>
 						<a href="#" id="projLink">View Projects</a>
