--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta name="keywords" content= "software engineer, web development, software development, programming">
 	<meta name="author" content="Genesis Barrios">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -15,14 +17,14 @@
 </head>
 <body>
 	<div class="container-fluid bg row" id="top">
-		<div class="fill col-10">
+		<div class="fill col-10" style="margin-bottom:8%;">
 			<div class="row align-items-center" style="margin-bottom:7%;">
 				<div class="col-1">
 				</div>
 
 				<div class="col-3">
 					<div class="face-cont" id="face">
-						<img class="face" src="https://drive.google.com/uc?id=1J4vRhyOxKnHbgRQQ7sOOVExxj-3oKfZN">
+						<img class="face" src="https://drive.google.com/uc?id=1BadTAxwHBWflsfIeE6cpwzGtRIYYLN3R">
 					</div>
 				</div>
 
@@ -56,9 +58,19 @@
 		</div>
 	</div>
 
-	<div class="row" id="projects"></div>
+	<section class="projects d-flex ">
+		<div class="project justify-content-center align-self-center">
+			<img src="https://drive.google.com/uc?id=1ffpL3s2ejJaFSjNRW23g0moWkCbpcWJT" alt="Wavy Pads Web Synth"/>
+			<h2>Wavy Pads</h2>
+			<p class="serif"> March 2021 </p>
+			<p class="serif"> A Web Based Synth with EQ, Gain, Decay, Reverb, Octave, and Key Inputs. </p>
+			<div class="row">
+				<a href="https://github.com/genesisbarrios/wavypads" target="_blank" class="view-button"> View Project </a>
+			</div>
+		</div>
+	</section>
 
-	<section class="projects d-flex">
+	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1KzxObx4MwrtQ_iXZn2BG1tYrJnFCH2Hm" alt="Group Event Manager Mobile App"/>
 			<h2>Group Event Manager</h2>
@@ -70,7 +82,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex darkgrey">
+	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1ps5VAAgkwMktDpkeaaOCKNdbz2BeLQPQ" alt="Jumpy Blocks"/>
 			<h2>Jumpy Blocks</h2>
@@ -82,7 +94,7 @@
 		</div>
 	</section>
 
-	<section class="projects red d-flex">
+	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1kHyPPxqmGHWePdPgrhfEkBP2hxI0s90b"/>
 			<h2>YouTube Multiple Comment App</h2>
@@ -94,7 +106,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex">
+	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1QwBhqXjcjJEMfJhX7J4b_cKfjBgzi_o1"/>
 			<h2>Geek Text</h2>
@@ -106,7 +118,7 @@
 		</div>
 	</section>
 
-	<section class="projects darkgrey d-flex">
+	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1Uirx5_Jkx9MH5sIOVllo7TiwKpuh0AXB"/>
 			<h2>Backroom Sessions iOS Application</h2>
@@ -118,7 +130,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex">
+	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=10imPKHtmjV_teJIHW1F0emoVAVtyzdqa"/>
 			<h2>Database Web Interface</h2>
@@ -130,7 +142,7 @@
 		</div>
 	</section>
 
-	<section class="projects darkgrey d-flex">
+	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1D-FC7RuBkkuSbg-jYBQvb_ZHJv8MSN0b" alt="BMP Image Processor"/>
 			<h2>BMP Image Processor</h2>
@@ -142,7 +154,7 @@
 		</div>
 	</section>
 
-	<section class="projects green d-flex">
+	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1MBHBDIFiWEPUa0iqhtB5xh1dKngee6W0" alt="Catering Form Project"/>
 			<h2>Catering Form Project</h2>
@@ -156,7 +168,7 @@
 		</div>
 	</section>
 
-	<section class="projects bluegreen d-flex">
+	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1aIJAwt07xGLfUYaEVEatpuLGzzSkge-9" alt="Weather App"/>
 			<h2>Weather App</h2>
@@ -168,7 +180,7 @@
 		</div>
 	</section>
 
-	<section class="projects pink d-flex">
+	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1zGuAKQCd1hMInSFJlgaPIqz_PqfUs41K" alt="Patatap Clone"/>
 			<h2>Shapes and Sounds - a Patatap clone</h2>
@@ -180,7 +192,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex red">
+	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1_cBNAZaHMIfpt_0gwvaUbuKvqI-uT13u" alt="Collaboration Website"/>
 			<h2>Collab, Bro?</h2>
@@ -193,7 +205,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex">
+	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1Zrb2I2BzSoMwLkSV2khyb86Mx7a7yQQf" alt="Image Gallery"/>
 			<h2>3:2</h2>
@@ -206,7 +218,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex darkgrey">
+	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1ZqGWrnyAR6041V_obQMHPpQja-V3aMJO" alt="Artist Website"/>
 			<h2>Artist Website</h2>
@@ -218,7 +230,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex blue">
+	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1FMw6bO6LfzOKDr4sn9nRnJM42RGPkMCQ" alt="Bulk Texting Application"/>
 			<h2>Automated Bulk Texting</h2>
@@ -230,7 +242,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex">
+	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://cdn.pixabay.com/photo/2014/03/07/09/43/robot-281880__340.jpg" alt="Two Player Web Hangman"/>
 			<h2>Two Player Hangman</h2>
