added missing class

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		</div>
 	</div>
 
-	<section class="projects d-flex ">
+	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1ffpL3s2ejJaFSjNRW23g0moWkCbpcWJT" alt="Wavy Pads Web Synth"/>
 			<h2>Wavy Pads</h2>
