added palm tree emoji

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<div class="about-cont" id ="about">
 							<h2 class="bottom-margin accent">
 								<b>Hello! My name is Genesis Barrios.</b>
-								<b>I'm a Software Engineer based in Miami, Florida.</b>
+								<b>I'm a Software Engineer based in Miami, Florida. 🌴 </b>
 							</h2>
 						<p class="serif">
 							I got my Bachelor's of Science in Computer Science Spring of 2020 from Florida International University.
