added technologies to descriptions

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			<img src="https://drive.google.com/uc?id=1ffpL3s2ejJaFSjNRW23g0moWkCbpcWJT" alt="Wavy Pads Web Synth"/>
 			<h2>Wavy Pads</h2>
 			<p class="serif"> March 2021 </p>
-			<p class="serif"> A Web Based Synth with EQ, Gain, Decay, Reverb, Octave, and Key Inputs. </p>
+			<p class="serif"> A Web Based Synth with EQ, Gain, Decay, Reverb, Octave, and Key Inputs. Built with Tone.js.</p>
 			<div class="row">
 				<a href="https://github.com/genesisbarrios/wavypads" target="_blank" class="view-button"> View Project </a>
 			</div>
@@ -75,7 +75,7 @@
 			<img src="https://drive.google.com/uc?id=1KzxObx4MwrtQ_iXZn2BG1tYrJnFCH2Hm" alt="Group Event Manager Mobile App"/>
 			<h2>Group Event Manager</h2>
 			<p class="serif"> October, 2020 </p>
-			<p class="serif"> A Mobile-App that allows users to create, edit, and rsvp to events. </p>
+			<p class="serif"> A Mobile-App that allows users to create, edit, and rsvp to events. Built with the Ionic Framework.</p>
 			<div class="row">
 				<a href="https://github.com/genesisbarrios/GroupEventManager" target="_blank" class="view-button"> View Project </a>
 			</div>
@@ -111,7 +111,7 @@
 			<img src="https://drive.google.com/uc?id=1QwBhqXjcjJEMfJhX7J4b_cKfjBgzi_o1"/>
 			<h2>Geek Text</h2>
 			<p class="serif"> December, 2019 </p>
-			<p class="serif">The project for my Software Engineering class. We created a web application that allows users to create a profile, browse for books and authors and add them to their cart, and leave reviews on books.</p>
+			<p class="serif">The project for my Software Engineering class. We created a web application that allows users to create a profile, browse for books and authors and add them to their cart, and leave reviews on books. Built with Angular and Node.js.</p>
 			<div class="row">
 				<a href="https://github.com/BarbosaO/CEN4010-Team-Project" target="_blank" class="view-button"> View Project</a>
 			</div>
@@ -123,7 +123,7 @@
 			<img src="https://drive.google.com/uc?id=1Uirx5_Jkx9MH5sIOVllo7TiwKpuh0AXB"/>
 			<h2>Backroom Sessions iOS Application</h2>
 			<p class="serif"> December, 2019 </p>
-			<p class="serif">As the final project for my Mobile Application Development class, we created an iOS application for a local business.</p>
+			<p class="serif">As the final project for my Mobile Application Development class, we created an iOS application for a local business. Built with Swift in XCode.</p>
 			<div class="row">
 				<a href="https://github.com/Isumy/BackroomSessions_Team_B" target="_blank" class="view-button"> View Project</a>
 			</div>
@@ -135,7 +135,7 @@
 			<img src="https://drive.google.com/uc?id=10imPKHtmjV_teJIHW1F0emoVAVtyzdqa"/>
 			<h2>Database Web Interface</h2>
 			<p class="serif"> April, 2019 </p>
-			<p class="serif">An assignment for my Database Management class. A node.js application that allows the user to manipulate several tables in a mysql database of Books.</p>
+			<p class="serif">An assignment for my Database Management class. A Node.js application that allows the user to manipulate several tables in a mysql database of Books.</p>
 			<div class="row">
 				<a href="mailto:genesisbarriosdev@gmail.com" target="_blank" class="view-button">Request Code</a>
 			</div>
@@ -147,7 +147,7 @@
 			<img src="https://drive.google.com/uc?id=1D-FC7RuBkkuSbg-jYBQvb_ZHJv8MSN0b" alt="BMP Image Processor"/>
 			<h2>BMP Image Processor</h2>
 			<p class="serif"> March, 2019 </p>
-			<p class="serif">An assignment for my Programming 3 class. It takes a bmp image and given the options(from the command line): it will scale the image, rotate the image, or flip the image horizonally or vertically.</p>
+			<p class="serif">An assignment for my Programming 3 class. It takes a bmp image and given the options(from the command line): it will scale the image, rotate the image, or flip the image horizonally or vertically. Built in C.</p>
 			<div class="row">
 				<a href="mailto:genesisbarriosdev@gmail.com" target="_blank" class="view-button">Request Code</a>
 			</div>
@@ -161,7 +161,7 @@
 			<p class="serif"> August, 2018 </p>
 			<p class="serif"> An application that allows users to fill out a form with their contact information
 			and what items they want from a menu. Upon submission, this data is stored into our Microsoft SQL database, 
-			and an e-mail with the order information is sent.</p>
+			and an e-mail with the order information is sent. Built with C#.</p>
 			<div class="row">
 				<a href="mailto:genesisbarriosdev@gmail.com" class="view-button">Request Code</a>
 			</div>
@@ -247,7 +247,7 @@
 			<img src="https://cdn.pixabay.com/photo/2014/03/07/09/43/robot-281880__340.jpg" alt="Two Player Web Hangman"/>
 			<h2>Two Player Hangman</h2>
 			<p class="serif date"> March, 2017 </p>
-			<p class="serif"> As my TADHack Mini Orlando 2017 project submission I created a two-player web hangman game with an integrated audio call using the Temasys WebRTC APIs. </p>
+			<p class="serif"> As my TADHack Mini Orlando 2017 project submission I created a two-player web hangman game with an integrated audio call using the Temasys WebRTC APIs and Javascript. </p>
 			<div class="row">
 				<a href="https://github.com/bennypaulino/peer-to-peer-hangman" target="_blank" class="view-button">View Project</a>
 			</div>
