added senior project

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		</div>
 	</div>
 
-	<section class="projects d-flex two">
+	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1ffpL3s2ejJaFSjNRW23g0moWkCbpcWJT" alt="Wavy Pads Web Synth"/>
 			<h2>Wavy Pads</h2>
@@ -70,7 +70,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex one">
+	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1KzxObx4MwrtQ_iXZn2BG1tYrJnFCH2Hm" alt="Group Event Manager Mobile App"/>
 			<h2>Group Event Manager</h2>
@@ -82,7 +82,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex two">
+	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1ps5VAAgkwMktDpkeaaOCKNdbz2BeLQPQ" alt="Jumpy Blocks"/>
 			<h2>Jumpy Blocks</h2>
@@ -94,7 +94,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex one">
+	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1kHyPPxqmGHWePdPgrhfEkBP2hxI0s90b"/>
 			<h2>YouTube Multiple Comment App</h2>
@@ -106,12 +106,24 @@
 		</div>
 	</section>
 
+	<section class="projects d-flex one">
+		<div class="project justify-content-center align-self-center">
+			<img src="https://drive.google.com/uc?id=1AQCVEyUjSCshzLvIyqwEMuYjEUTwa8MF"/>
+			<h2>VirtualRollCall</h2>
+			<p class="serif"> April, 2020 </p>
+			<p class="serif">For my senior project my teammate and I recreated the documentation and attendance application for the Pinecrest police department. Built with Angular, and Node.js.</p>
+			<div class="row">
+				<a href="https://github.com/genesisbarrios/VirtualRollCallSpring2020" target="_blank" class="view-button"> View Project</a>
+			</div>
+		</div>
+	</section>
+
 	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1QwBhqXjcjJEMfJhX7J4b_cKfjBgzi_o1"/>
 			<h2>Geek Text</h2>
 			<p class="serif"> December, 2019 </p>
-			<p class="serif">The project for my Software Engineering class. We created a web application that allows users to create a profile, browse for books and authors and add them to their cart, and leave reviews on books. Built with Angular and Node.js.</p>
+			<p class="serif">The project for my Software Engineering class. We created a web application that allows users to create a profile, browse for books and authors and add them to their cart, and leave reviews on books. Built with Javascript, Express.js, Node.js, and MongoDB.</p>
 			<div class="row">
 				<a href="https://github.com/BarbosaO/CEN4010-Team-Project" target="_blank" class="view-button"> View Project</a>
 			</div>
